syntax = "proto3";

package demo;

import "smithytranslate/big_integer.proto";

import "smithytranslate/big_decimal.proto";

import "smithytranslate/timestamp.proto";

message UseApiStruct {
  smithytranslate.BigInteger bigInt = 1;
  smithytranslate.BigDecimal bigDec = 2;
  smithytranslate.Timestamp ts = 3;
}
